# zalanx-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  tests.yml
src/zablo/: __init__.py  __main__.py  client.py  config.py  crypto.py  main.py
src/zalanx/: __init__.py  __main__.py  client.py  config.py  main.py
tests/: test_crypto.py
