[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "zalanx-cli"
version = "0.1.0"
description = "Zalanx — zero-knowledge secrets for machines. CLI client."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Zalanx" }]
requires-python = ">=3.9"
keywords = ["secrets", "vault", "zero-knowledge", "kms", "oidc", "workload-identity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "cryptography>=42.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
zalanx = "zalanx.main:app"
zx = "zalanx.main:app"

[project.urls]
Homepage = "https://zalanx.io"
Documentation = "https://zalanx.io/docs"
Repository = "https://github.com/zalanx/zalanx-cli"
Issues = "https://github.com/zalanx/zalanx-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zalanx"]

[tool.hatch.build.targets.sdist]
include = ["src/zalanx", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "S", "PL"]
ignore = ["S101", "PLR0913"]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
